"""Base bazel dependencies"""

module(
    name = "network_retrocomp",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "protobuf", version = "33.5", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_pkg", version = "1.2.0")
