"""Base bazel dependencies"""

module(
    name = "network_retrocomp",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//endpoint:go.mod")
use_repo(go_deps, "com_github_gorilla_mux")
